docs/v7.1/properties/P188.md
---
layout: page
title: P188 nécessite l'outil (est l'outil de production de)
titleEn: P188 requires production tool (is production tool for) - nécessite l'outil (est l'outil de production de)
permalink: /v7.1/proprietes/P188
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E99 Product Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code></p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E19 Physical Object</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code></p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>one to many (1,n:1,1)</p>
</td>
<td>
<p>un à plusieurs (1,n:1,1)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property associates an instance of E99 Product Type with an instance of E19 Physical Object that is needed for the production of an instance of E18 Physical Thing. When the process of production is correctly executed in accordance with the plan and using the specified instance of E19 Physical Object, the resulting instance of E18 Physical Thing is considered an exemplar of this instance of E99 Product Type. The instance of E19 Physical Object may bear distinct features that are transformed into characteristic features of the resulting instance of E18 Physical Thing. Examples include models and moulds.</p>
</td>
<td>
<p>Cette propriété associe une instance de <code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code> à une instance de <code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code> nécessaire à la production d'une instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>. Lorsque le processus de production est exécuté adéquatement – conformément au plan et en utilisant l'instance indiquée de <code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code> – l'instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code> qui en résulte est considérée comme des exemples de cette instance de <code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code>. Cette instance de <code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code> peut avoir des caractéristiques distinctes qui sont transformées en caractéristiques typiques de l'instance résultante de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>, comme c'est le cas de modèles ou de moules. </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>the luggage compartment lid mould (E19) for the Volkswagen Type 11 (Beetle) (E99) (https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg/220px-Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg) (Rieger, 2013)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Le moule (<code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code>) du coffre à bagages de la Volkswagen « Type 11 (Coccinelle) » (<code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code>) (https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg/220px-Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg) (Rieger, 2013)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P188(x,y) ⇒ E99(x)</p>
<p>P188(x,y) ⇒ E19(y)</p>
</td>
<td>
<p>P188(x,y) ⇒ E99(x)</p>
<p>P188(x,y) ⇒ E19(y)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
