docs/v7.1.2/properties/P188.md
---
layout: page
title: P188 nécessite l'outil (est l'outil de production de)
titleEn: P188 requires production tool (is production tool for) - nécessite l'outil (est l'outil de production de)
permalink: /v7.1.2/proprietes/P188
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E99 Product Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E19 Physical Object</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>one to many (1,n:1,1)</p>
</td>
<td>
<p>un à plusieurs (1,n:1,1)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property associates an instance of E99 Product Type with an instance of E19 Physical Object that is needed for the production of an instance of E18 Physical Thing. When the process of production is correctly executed in accordance with the plan and using the specified instance of E19 Physical Object, the resulting instance of E18 Physical Thing is considered an exemplar of this instance of E99 Product Type. The instance of E19 Physical Object may bear distinct features that are transformed into characteristic features of the resulting instance of E18 Physical Thing. Examples include models and moulds.</p>
</td>
<td>
<p>Cette propriété associe une instance de <code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code> à une instance de <code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code> nécessaire à la production d'une instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>. Lorsque le processus de production est exécuté adéquatement – conformément au plan et en utilisant l'instance indiquée de <code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code> – l'instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code> qui en résulte est considérée comme des exemples de cette instance de <code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code>. Cette instance de <code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code> peut avoir des caractéristiques distinctes qui sont transformées en caractéristiques typiques de l'instance résultante de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>, comme c'est le cas de modèles ou de moules. </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>Volkswagen Type 11 (Beetle) (E99) <em>requires production tool</em> the luggage compartment lid mould for the Volkswagen Type 11 (Beetle) (E22). [See thumbnail image of the luggage compartment lid: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg/220px-Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg)] (Rieger, 2013)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La Volkswagen « Type 11 (Coccinelle) » (<code class="language-plaintext highlighter-rouge">E99_Modèle_de_produit</code>) nécessite (<code class="language-plaintext highlighter-rouge">P188_nécessite_l’outil</code>) un moule pour la production de son coffre à bagages (<code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code>) [voir l'image du moule (<a href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg/220px-Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg"><span class="underline">https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg/220px-Volkswagen_Type_1_(Auto_classique_St._Lazare_%2710).jpg</span></a>)] (Rieger, 2013)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P188(x,y) ⇒ E99(x)</p>
<p>P188(x,y) ⇒ E19(y)</p>
</td>
<td>
<p>P188(x,y) ⇒ E99(x)</p>
<p>P188(x,y) ⇒ E19(y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
